force-app/main/default/objects/CLQ_Tools_Rules__c/CLQ_Tools_Rules__c.object-meta.xml
<CustomObject>
    <description>Junction object that manages the N:N relationship between the Visit Tool and Rules objects</description>
    <label>Tools Rules</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Tools Rules No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tools Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>