force-app/main/default/objects/CLQ_Tools_Rules__c/fields/CLQ_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Domain_Name__c</fullName>
    <formula>CLQ_Domain_Rule__r.CLQ_Domain__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain Name</label>
    <type>Text</type>
</CustomField>