force-app/main/default/objects/CLQ_Tools_Rules__c/fields/CLQ_Domain_Rule__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Domain_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domain Rule</label>
    <referenceTo>CLQ_Domain_Rule__c</referenceTo>
    <relationshipLabel>Tools Rules</relationshipLabel>
    <relationshipName>Tools_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>