force-app/main/default/objects/CLQ_Tools_Rules__c/fields/CLQ_Inspection_Tools__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Tools__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Tools</label>
    <referenceTo>CLQ_Inspection_Tools__c</referenceTo>
    <relationshipLabel>Tools Rules</relationshipLabel>
    <relationshipName>Tools_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>