force-app/main/default/objects/CLQ_Tools_Rules__c/fields/CLQ_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rule_Name__c</fullName>
    <formula>CLQ_Domain_Rule__r.CLQ_Rule__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Name</label>
    <type>Text</type>
</CustomField>