force-app/main/default/objects/CLQ_Tools_Rules__c/fields/CLQ_Scope__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Scope__c</fullName>
    <formula>IF(INCLUDES(  CLQ_Domain_Rule__r.CLQ_Applicable_To_Scope__c , &quot;Full&quot;), &quot;Full,&quot;, NULL) + 
IF(INCLUDES( CLQ_Domain_Rule__r.CLQ_Applicable_To_Scope__c, &quot;Focused&quot;), &quot;Focused&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope</label>
    <type>Text</type>
</CustomField>