force-app/main/default/objects/CLQ_Tools_Rules__c/fields/CLQ_Scope_Tool__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Scope_Tool__c</fullName>
    <formula>TEXT(CLQ_Inspection_Tools__r.CLQ_Applicable_To_Scope__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope(Tool)</label>
    <type>Text</type>
</CustomField>